[tool.poetry]
name = "hiosint"
version = "1.1.1"
description = "An OSINT tool designed to gather reliable information from multiple sources."
authors = ["iamosint <osint@iamosint.33mail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/iamosint/hiosint/"
keywords = ["OSINT", "python", "aiohttp", "email-osint"]
classifiers = ["Framework :: aiohttp", "Natural Language :: English"]

[tool.poetry.scripts]
hiosint = 'hiosint.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
aiohttp = "^3.8.5"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
